# simhash

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  GlogHelper.h  main.cpp
