# CMake 最低版本号要求
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(simhashe)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

SET(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS "SOURCE_DIR: ${SOURCE_DIR}")

SET(EXTERNAL_DIR ${SOURCE_DIR}/external)
message(STATUS "EXTERNAL_DIR: ${EXTERNAL_DIR}")

set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
link_directories(${LIBRARY_OUTPUT_PATH})

# set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
# message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

ADD_SUBDIRECTORY(external)

ADD_SUBDIRECTORY(src)
